--- a/style.less
+++ b/style.less
@@ -64,29 +64,54 @@ and Blueprint http://www.blueprintcss.org/
 /* =Reset
 -------------------------------------------------------------- */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	border: 0;
-	font-family: inherit;
-	font-size: 100%;
-	font-style: inherit;
-	font-weight: inherit;
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin: 0;
-	outline: 0;
 	padding: 0;
+	border: 0;
+	font-size: 100%;
 	vertical-align: baseline;
 }
+body {
+	line-height: 1;
+}
+ol,
+ul {
+	list-style: none;
+}
+blockquote,
+q {
+	quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+caption,
+th,
+td {
+	font-weight: normal;
+	text-align: left;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	clear: both;
+}
 html {
-	font-size: 62.5%; /* Corrects text resizing oddly in IE6/7 when body font-size is set using em units http://clagnut.com/blog/348/#c790 */
-	overflow-y: scroll; /* Keeps page centred in all browsers regardless of content height */
-	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
-	-ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
+	overflow-y: scroll;
+	font-size: 100%;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
 }
 body {
 	background: @background;
@@ -157,6 +182,14 @@ hr {
 	border: 0;
 	height: 1px;
 	margin-bottom: 1.5em;
+}
+h1 {
+	font-size: 21px;
+	font-size: 1.5rem;
+}
+h2 {
+	font-size: 18px;
+	font-size: 1.285715286rem;
 }
 
 /* Text elements */
@@ -342,6 +375,10 @@ textarea {
 	padding-left: 3px;
 	vertical-align: top; /* Improves readability and alignment in all browsers */
 	width: 98%;
+}
+#page {
+	display: block;
+	margin: 0 auto;
 }
 
 /* Links */
@@ -590,4 +627,30 @@ object {
 /* Search widget */
 #searchsubmit {
 	display: none;
+}
+
+
+
+
+/* Different Layout Views
+----------------------------------------------- */
+
+/* Mobile layout
+ * 240-479 px
+ * Zoomed out below 320 px
+----------------------------------------------- */
+@media screen and (min-width: 15em) {
+	#page {
+		width: @4cols;
+	}
+}
+
+/* Wide Mobile layout
+ * 480-767 px
+ * Zoomed in above 480 px
+----------------------------------------------- */
+@media screen and (min-width: 30em) {
+	#page {
+		width: @6cols;
+	}
 }
